--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+  <style>
+    html, body, #root, #app, #app>div {
+  height: 100%;
+}
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
